<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/UserImage"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:layout_marginBottom="0dp"
            android:background="@android:drawable/gallery_thumb"
            android:baselineAlignBottom="true"
            android:contentDescription="Your image"
            android:visibility="visible"
            app:srcCompat="@drawable/default_user"
            tools:srcCompat="@drawable/default_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="Name(*)"
                    android:textColor="#212F3C "
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/Age"
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="95dp"
                    android:text="Age"
                    android:textColor="#212F3C "
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/EditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:maxLength="20" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/EditTextAge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="3" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Sex："
                android:textColor="#212F3C "
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/RgSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female" />

            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|left"
            android:text="Location"
            android:textColor="#212F3C "
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/EditTextCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Country"
                    android:inputType="textPersonName"
                    android:maxLength="25" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/EditTextTextCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="City"
                    android:inputType="textPersonName"
                    android:maxLength="25" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/Height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Height"
                    android:textColor="#212F3C "
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/Weight"
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"
                    android:text="Weight"
                    android:textColor="#212F3C "
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/EditTextHeightFoot"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="foot"
                            android:inputType="number"
                            android:maxLength="2" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/EditTextHeightInch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="inch"
                            android:inputType="number"
                            android:maxLength="2" />
                    </FrameLayout>

                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/EditTextWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="lbs"
                    android:inputType="numberDecimal"
                    android:maxLength="7" />
            </FrameLayout>

        </LinearLayout>

        <Button
            android:id="@+id/SubmitButtonUsers"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-black"
            android:text="Submit"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>