...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/RgStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/Sedentary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="Sedentary" />

                <RadioButton
...
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RadioGroup
                    android:id="@+id/RgGoal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start">

                    <RadioButton
                        android:id="@+id/gainWeight"
...
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="Lose Weight: "
                        android:textColor="@android:color/background_dark" />

                    <RadioButton
                        android:id="@+id/maintainWeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="Maintain Weight" />

                </RadioGroup>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
...
                </LinearLayout>
            </FrameLayout>

        </LinearLayout>

        <Button
            android:id="@+id/GetMyPlanButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#224F71"
            android:gravity="center_horizontal|center_vertical"
            android:text="Get My Plan"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
...
