...
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/CalculatorButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#3F51B5"
                    android:text="Fitness Calculator"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="24sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
...
